--- a/inst/scripts/datasetList.Rmd
+++ b/inst/scripts/datasetList.Rmd
@@ -20,4 +20,6 @@ knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 + **tfBinding_hg38_cistrome**: TF Binding Info hg38 (CistromeDB and ENCODE)
 + **tfBinding_mm10_atlas**: TF Binding Info mm10 (ChIP-Atlas and ENCODE)
 + **tfBinding_mm10_cistrome**: TF Binding Info mm10 (CistromeDB and ENCODE)
++ **human_pwms_v2**: TF motifs human
++ **mouse_pwms_v2**: TF motifs mouse
 
