--- a/inst/scripts/make-data-tfBinding.Rmd
+++ b/inst/scripts/make-data-tfBinding.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "TF Binding Info"
-author: "Xiaosai Yao"
-date: 2022-10-06
+author: "Xiaosai Yao, Tomasz Włodarczyk"
+date: 2024-03-21
 output:
   BiocStyle::html_document:
     titlecaps: false
