add sample-specific and tissue-specific chip-seq

--- a/inst/scripts/make-data-tfBinding.Rmd
+++ b/inst/scripts/make-data-tfBinding.Rmd
@@ -53,7 +53,21 @@ for (genome in c("hg38", "mm10")){
 }
 
 ```
+Download bed files by sample
 
+```{r}
+for (genome in c("mm10","hg38")){
+   metadata <- read.delim("experimentList.tab", header=FALSE)
+   metadata <- metadata[metadata$V2 == genome,]
+   metadata <- metadata[metadata$V3 == "TFs and others",]
+
+
+# write files for download
+fileConn <- file(paste0("data/download.tissue.", genome,".txt"))
+writeLines(paste0("wget -nc https://chip-atlas.dbcls.jp/data/", genome,"/eachData/bed05/", metadata$V1,".05.bed"), fileConn)
+close(fileConn)
+}
+```
 #### 1.2. ENCODE
 
 Transcription factor ChIP-seq peaks were downloaded from [ENCODE data portal](https://www.encodeproject.org/)
@@ -329,7 +343,185 @@ for (genome in c("mm10", "hg38")){
 }
 ```
 
+#### 2.4 Merge ChIP-Atlas peaks by sample
+
+```{r ChIP-Atlas by sample}
+
+library(rtracklayer)
+#import metadata
+
+for (genome in c("hg38, mm10")){
+   metadata <- read.delim("experimentList.tab", header=FALSE)
+   metadata <- metadata[metadata$V2 == genome,]
+   metadata <- metadata[metadata$V3 == "TFs and others",]
+
+    # import bed
+    extraCols_narrowPeak <- c(singnalValue = "numeric", pValue = "numeric",
+                              qValue = "numeric", peak = "integer")
+
+    grl <- list()
+    gr <- list()
+
+    celllines <- unique(metadata$V6)
+    celllines <- as.vector(na.omit(celllines))
+    for (cellline in celllines){
+        message("cell line = ", cellline)
+        metadata.cellline <- metadata[which(metadata $V6 == cellline),]
+        unique.tf <- unique(metadata.cellline$V4)
+
+        for (tf in unique.tf){
+            message("tf = ", tf)
+            bed <- metadata.cellline$V1[metadata.cellline$V4 ==tf]
+
+
+            for (i in 1:length(bed)) {
+                file <- paste0(bed[i],".05.bed")
+
+                if (file.exists(file)) {
+                    gr[[i]] <- try(rtracklayer::import(file, extraCols = extraCols_narrowPeak))
+
+                }
+
+            }
+
+            if (length(gr) !=0){
+                grl[[cellline]][[tf]] <- reduce(do.call(c, gr))
+            }
+
+        }
+
+        grl[[cellline]] <- do.call(GRangesList, grl[[cellline]])
+
+    }
+
+
+    saveRDS(grl, paste0("grl.chipatlas.sample.", genome,".rds"))
+
+}
+
+```
+#### 2.5 Merge ChIP-Atlas peaks by tissue
+```{r ChIP-Atlas by tissue}
+library(rtracklayer)
+#import metadata
+
+for (genome in c("mm10","hg38")){
+   metadata <- read.delim("experimentList.tab", header=FALSE)
+   metadata <- metadata[metadata$V2 == genome,]
+   metadata <- metadata[metadata$V3 == "TFs and others",]
+
+    # import bed
+    extraCols_narrowPeak <- c(singnalValue = "numeric", pValue = "numeric",
+                              qValue = "numeric", peak = "integer")
+
+    grl <- list()
+    gr <- list()
+
+    tissues <- unique(metadata$V5)
+    tissues <- as.vector(na.omit(tissues))
+    for (tissue in tissues){
+        message("tissue = ", tissue)
+        metadata.tissue <- metadata[which(metadata $V5 == tissue),]
+        unique.tf <- unique(metadata.tissue$V4)
+
+        for (tf in unique.tf){
+            message("tf = ", tf)
+            bed <- metadata.tissue$V1[metadata.tissue$V4 ==tf]
+
+
+            for (i in 1:length(bed)) {
+                file <- paste0(bed[i],".05.bed")
+
+                if (file.exists(file)) {
+                    gr[[i]] <- try(rtracklayer::import(file, extraCols = extraCols_narrowPeak))
+                }
+
+            }
+
+            if (length(gr) !=0){
+                grl[[tissue]][[tf]] <- reduce(do.call(c, gr))
+            }
+
+        }
+
+        grl[[tissue]] <- do.call(GRangesList, grl[[tissue]])
+
+    }
+
+    saveRDS(grl, paste0("grl.chipatlas.tissue.", genome,".rds"))
+
+}
+
+```
+#### 2.6 Merge ENCODE peaks by sample
+```{r ENCODE by sample}
+
+library(rtracklayer)
+#import metadata
+
+metadata.path <- c(hg38="human",
+                   mm10="mm10")
+
+for (genome in c("hg38", "mm10")){
+
+    metadata <- read.delim(file.path(metadata.path[genome], "raw","metadata.tsv"), header=TRUE)
+    metadata <- metadata[metadata$File.assembly == genome,]
+    metadata <- metadata[metadata$Assay == "TF ChIP-seq",]
+
+
+    # import bed
+    extraCols_narrowPeak <- c(singnalValue = "numeric", pValue = "numeric",
+                              qValue = "numeric", peak = "integer")
+
+    grl <- list()
+    gr <- list()
+
+    celllines <- unique(metadata$Biosample.term.name)
+    celllines <- as.vector(na.omit(celllines))
+    for (cellline in celllines){
+        message("cell line = ", cellline)
+        metadata.cellline <- metadata[which(metadata $Biosample.term.name == cellline),]
+        unique.tf <- unique(metadata.cellline$Experiment.target)
+
+        for (tf in unique.tf){
+            message("tf = ", tf)
+            tf.name <- sapply(strsplit(tf, "-"),"[",1)
+            bed <- metadata.cellline$File.accession[metadata.cellline$Experiment.target ==tf]
+
+
+            for (i in 1:length(bed)) {
+                file <- file.path(metadata.path[genome], "filtered", paste0(bed[i],".bed.gz"))
+
+                if (file.exists(file)) {
+                    gr[[i]] <- try(rtracklayer::import(file, extraCols = extraCols_narrowPeak))
+
+                }
+
+
+
+            }
+
+            if (length(gr) !=0){
+                grl[[cellline]][[tf.name]] <- reduce(do.call(c, gr))
+            }
+
+        }
+
+
+
+        grl[[cellline]] <- do.call(GRangesList, grl[[cellline]])
+
+    }
+
+
+    saveRDS(grl, paste0("grl.encode.sample", genome,".rds"))
+
+}
+
+```
+
 #### 3. Liftover
+
 
 Perform liftover from hg38 to hg19 for the ChIP-seq binding sites
 
@@ -350,7 +542,12 @@ library(liftOver)
 
 grl_hg19 <- liftOver(grl, ch)
 saveRDS(grl_hg19, file = "hg19_motif_bed_granges.rds")
+
+
+
 ```
+
+
 
 #### 4. Session information
 
