--- a/inst/scripts/datasetList.Rmd
+++ b/inst/scripts/datasetList.Rmd
@@ -15,11 +15,20 @@ knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 + **prostateENZ**: LNCaP Cells Treated with Enzalutamide
 + **reprogramSeq**: Reprogram-seq of LNCaP cells
 + **tfBinding_hg19_atlas**: TF Binding Info hg19 (ChIP-Atlas and ENCODE)
++ **tfBinding_hg19_atlas.sample**: TF Binding Info hg19 by sample (ChIP-Atlas)
++ **tfBinding_hg19_atlas.tissue**: TF Binding Info hg19 by tissue (ChIP-Atlas)
 + **tfBinding_hg19_cistrome**: TF Binding Info hg19 (CistromeDB and ENCODE)
++ **tfBinding_hg19_encode.sample**: TF Binding Info hg19 by sample (ENCODE)
 + **tfBinding_hg38_atlas**: TF Binding Info hg38 (ChIP-Atlas and ENCODE)
++ **tfBinding_hg38_atlas.sample**: TF Binding Info hg38 by sample (ChIP-Atlas)
++ **tfBinding_hg38_atlas.tissue**: TF Binding Info hg38 by tissue (ChIP-Atlas)
 + **tfBinding_hg38_cistrome**: TF Binding Info hg38 (CistromeDB and ENCODE)
++ **tfBinding_hg38_encode.sample**: TF Binding Info hg38 by sample (ENCODE)
 + **tfBinding_mm10_atlas**: TF Binding Info mm10 (ChIP-Atlas and ENCODE)
++ **tfBinding_mm10_atlas.sample**: TF Binding Info mm10 by sample (ChIP-Atlas)
++ **tfBinding_mm10_atlas.tissue**: TF Binding Info mm10 by tissue (ChIP-Atlas)
 + **tfBinding_mm10_cistrome**: TF Binding Info mm10 (CistromeDB and ENCODE)
++ **tfBinding_mm10_encode.sample**: TF Binding Info mm10 by sample (ENCODE)
 + **human_pwms_v2**: TF motifs human
 + **mouse_pwms_v2**: TF motifs mouse
 
