AR drug data set update

--- a/inst/scripts/datasetList.Rmd
+++ b/inst/scripts/datasetList.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
 
 + **colonHealthy**: Single-cell analysis of samples from healthy human colon
++ **dataset**: PBMC Data Set
 + **hematopoiesis**: scATAC-seq and unpaired scRNA-seq of hematopoetic cells
 + **prostateENZ**: LNCaP Cells Treated with Enzalutamide
 + **reprogramSeq**: Reprogram-seq of LNCaP cells
